--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,13 @@ constantly==23.10.4
 cryptography==41.0.7
 daphne==4.0.0
 Django==4.2.7
+gunicorn==21.2.0
 hyperlink==21.0.0
 idna==3.6
 incremental==22.10.0
 mysqlclient==2.1.1
 oauthlib==3.2.2
+packaging==23.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
